# Code-Samples

./: .gitignore  Basic_Structure.py  EDA.py  Python_Basic.py  Visualization.py
AI_HuggingFace/: ML_test,py  transformers_sentiment.py
API/: Grounded.py  Naver_News.py
DigitalSreeni/: 1st.iap  sreeni_thank_you.iap
Document/: aws_rekognition.py  clova_ocr (not working).py  clova_ocr.py  clova_ocr_gpt.py  document_ocr.py  document_ocr_with_link.py  document_parse.py  document_parse_json.py  document_parse_txt.py  img_upload_aws_s3.py  paddle_ocr.py
EDA/: Basic_Python.py  Basic_Structure.py  Python_Adv.py  Python_Basic.py  csv_to_jsonl.py  jsonl_to_pd.py  jsonl_to_pd_multi_api.py  korean_font.md  list_to_str_summary_1_4o.json  list_to_str_summary_1_o1.json  list_to_str_summary_1_o1_docs_chunk_summary.py  read_json.py
FastAPI/: call_infer.py  intro.md  main.py  v1_fastapi_json_pydantic.py  v2_fastapi_str.py  v3_fastapi_json_at_least_typehint.py  v4_fastapi_json_infer.py
GCP/: firestore_tutorial.py  google_firestore.py  google_tts_gpt.py
HARDWARE/: HARDWARE.txt
HuggingFace_Download/: hyper_param_tuning.md  special_lecture.py  류태선_강사님_허깅페이스.ipynb
LLM_quickstart/: grok_quick2.py  openai_quick.py  openai_solar_query_generation_3_key_based_prompt.py
LangChain/: LC-101-ChatOpenAI.py  LC-102-1-gemini-chat-advice.py  LC-102-chat_models_openai.py  (+7 more)
LangChain/langchain_tutorial/deep_research_실습/: README.md  graph.ipynb  langgraph.json  multi_agent.ipynb  pyproject.toml  requirements.txt
LangChain/langchain_tutorial/deep_research_실습/src/: __init__.py  configuration.py  graph.py  multi_agent.py  prompts.py  state.py  utils.py
LangChain/langchain_tutorial/deep_research_실습/src/workflow/: configuration.py  prompts.py  state.py  workflow.py
LangChain/langchain_tutorial/deep_research_실습/tests/: conftest.py  run_test.py  test_report_quality.py
LangChain/langchain_tutorial/deep_research_실습/tests/evals/: evaluators.py  run_evaluate.py  target.py
(+191 files in other folders)
