[project]
name = "kt_deep_research"
version = "0.1.0"
description = "Planning, research, and report generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.5.0",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-anthropic>=0.3.15",
    "langchain-mcp-adapters>=0.1.8",
    "langchain-deepseek>=0.1.2",
    "langchain-tavily>=0.2.5",
    "langchain-groq>=0.2.4",
    "openai>=1.93.0",
    "tavily-python>=0.7.9",
    "arxiv>=2.1.3",
    "pymupdf>=1.26.1",
    "xmltodict>=0.14.2",
    "linkup-sdk>=0.2.3",
    "duckduckgo-search>=8.0.5",
    "exa-py>=1.14.13",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "markdownify>=0.11.6",
    "azure-identity>=1.21.0",
    "azure-search>=1.0.0b2",
    "azure-search-documents>=11.5.3",
    "rich>=13.0.0",
    "langgraph-cli[inmem]>=0.3.3",
    "langsmith>=0.4.4",
    "jupyter>=1.1.1",
    "notebook>=7.4.4",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"src" = "src"
"tests" = "tests"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]